--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,10 @@ em {
 footer {
   text-align: right;
   position: fixed;
-  background-color: 333333
+  background-color: #333333;
   bottom: 0;
   left: 0;
   right: 0;
-  color: #333333;
+  color: white;
   padding: 0 25px;
 }
